feat(iceberg): first metadata.json 파일 구조 확인

--- a/iceberg/notebooks/20250912_iceberg.ipynb
+++ b/iceberg/notebooks/20250912_iceberg.ipynb
@@ -2,21 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "d1890d0f-e301-40f8-a4f4-4890558494ad",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/09/27 11:04:03 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------------+\n",
-      "|        catalog|\n",
-      "+---------------+\n",
-      "|           demo|\n",
-      "|iceberg_catalog|\n",
-      "|  spark_catalog|\n",
-      "+---------------+\n",
+      "+-------------+\n",
+      "|      catalog|\n",
+      "+-------------+\n",
+      "|         demo|\n",
+      "|spark_catalog|\n",
+      "+-------------+\n",
       "\n"
      ]
     }
@@ -42,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "4c34d1e7-129c-4ee4-862a-6d92a82e0afb",
    "metadata": {},
    "outputs": [
@@ -65,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "18f553fd-09e6-49d9-bb20-95aac4852428",
    "metadata": {},
    "outputs": [
@@ -75,7 +81,7 @@
        "DataFrame[]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "f71bc552-6792-48ac-9f6e-c2a8294447b7",
    "metadata": {},
    "outputs": [
@@ -96,7 +102,7 @@
        "DataFrame[]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "a5ef56b0-1a0a-40be-bb76-63a64f134149",
    "metadata": {},
    "outputs": [
